--- a/createdb.yaml
+++ b/createdb.yaml
@@ -5,7 +5,7 @@
       ec2_group:
         name: dbsg
         description: an example EC2 group
-        vpc_id: vpc-3e94a045
+        vpc_id: vpc-0c9edd19cddae5f71
         region: us-east-1
         rules:
           - proto: tcp
@@ -21,8 +21,8 @@
         name: dbsubnet
         description: My Fancy Ex Parrot Subnet Group
         subnets:
-          - subnet-ad778c83
-          - subnet-e8d25ea2
+          - subnet-03e61006bc8ac6830
+          - subnet-0196fdc6967c80354
       register: dbsubnet
     - debug:
         var: dbsubnet
